...
                    android:gravity="center_vertical"
                    android:scaleType="centerCrop"
                    android:text="Tu calificación:"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rating_num"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_marginStart="-5dp"
                    android:gravity="center_vertical"
                    android:text="0"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/rating_star"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    app:srcCompat="@drawable/ic_star" />


...
