<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:theme="@style/RatingBar"
        android:progressTint="@color/azul_UCR"
        android:progressBackgroundTint="#C0D6E4"
        android:secondaryProgressTint="#C0D6E4"/>

</RelativeLayout>