...
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Sin resultados"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ucr_eats_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

...
