...

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Spinner
            android:id="@+id/default_role_spinner"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:dropDownWidth="wrap_content"
            android:elevation="8dp"
...

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Button
            android:id="@+id/save_role_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@android:string/ok" />
    </LinearLayout>
...
