<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10sp"
    android:layout_marginBottom="3dp">

    <LinearLayout
        android:id="@+id/ratingComment"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        android:padding="10sp">

        <TextView
            android:id="@+id/comment"
            android:layout_width="242dp"
            android:layout_height="20dp"
            android:fontFamily="@font/myriad_pro_regular"
            android:textColor="@color/blanco_UCR"
            android:textSize="15dp" />

        <Button
            android:id="@+id/clike"
            android:layout_width="38dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_thumb_up_grey_24dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/no_like"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/myriad_pro_regular"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/blanco_UCR"
            android:textSize="15dp" />

        <Button
            android:id="@+id/cdislike"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:focusable="false"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_thumb_down_grey_24dp"/>

        <TextView
            android:id="@+id/no_dislike"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/myriad_pro_regular"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/blanco_UCR"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>