<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:id="@+id/school_view"
    tools:context=".InterestPoints.FacultiesAndSchools.SchoolViewActivity">

    <TextView
        android:id="@+id/schoolName"
        android:layout_width="327dp"
        android:layout_height="117dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="51dp"
        android:fontFamily="@font/myriad_pro_bold"
        android:gravity="center"
        android:text="SchoolName"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/mapbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listSchoolItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/NavigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolName" />

    <fragment
        android:id="@+id/NavigationBar"
        class="cr.ac.ucr.ecci.cql.campus20.NavigationBarFragment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/comments"
        android:layout_width="394dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="9dp"
        android:background="@drawable/bottom_shape_comments"
        android:fontFamily="@font/myriad_pro_semi"
        android:text="@string/Comentarios"
        android:textColor="@color/blanco_UCR"
        app:layout_constraintBottom_toTopOf="@+id/NavigationBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <ImageView-->
<!--        android:id="@+id/schoolImage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:srcCompat="@drawable/color_cursor"-->
<!--        tools:layout_editor_absoluteX="142dp"-->
<!--        tools:layout_editor_absoluteY="463dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>